# wikidot-normalize

./: .gitignore  .travis.yml  Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yaml
benches/: perf.rs
misc/: header.txt
src/: ascii.rs  category.rs  lib.rs  normal.rs  test.rs  underscore.rs  unicode.rs
