[package]
name = "wikidot-normalize"
description = "Simple library to provide Wikidot-compatible string normalization"
repository = "https://github.com/Nu-SCPTheme/wikidot-normalize"
readme = "README.md"
license = "MIT"
keywords = ["wikidot", "normal", "nuscp"]
exclude = [".gitignore", ".travis.yml"]

version = "0.5.0"
authors = ["Ammon Smith <ammon.i.smith@gmail.com>"]
edition = "2018" # this refers to the Cargo.toml version

[badges]
travis-ci = { repository = "Nu-SCPTheme/wikidot-normalize", branch = "master" }

[dependencies]
lazy_static = "1"
maplit = "1"
regex = "1"

[dev-dependencies]
str-macro = "0.1"
