[package]
name = "wikidot-normalize"
description = "Simple library to provide Wikidot-compatible string normalization"
repository = "https://github.com/scpwiki/wikidot-normalize"
readme = "README.md"
license = "MIT"
keywords = ["wikidot", "normal", "nuscp"]
exclude = [".gitignore", ".travis.yml"]

version = "0.9.1"
authors = ["Ammon Smith <ammon.i.smith@gmail.com>"]
edition = "2018" # this refers to the Cargo.toml version

[dependencies]
lazy_static = "1"
maplit = "1"
regex = "1"
trim-in-place = "0.1"
unicode-normalization = "0.1"

[dev-dependencies]
str-macro = "1"
